@@ -60,6 +60,20 @@ public abstract class FoldHandler
 	public abstract int getFoldLevel(Buffer buffer, int lineIndex, Segment seg);
 	//}}}
 
+	//{{{ equals() method
+	/**
+	 * Returns if the specified fold handler is equal to this one.
+	 * @param o The object
+	 */
+	public boolean equals(Object o)
+	{
+		// Default implementation... subclasses can extend this.
+		if(o == null)
+			return false;
+		else
+			return getClass() == o.getClass();
+	} //}}}
+
 	//{{{ registerFoldHandler() method
 	/**
 	 * Adds a fold handler to the list of registered handlers
